Fix submit input bug on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ html {
   margin-top: 15px;
   border: none;
   text-align: center;
+  -webkit-appearance: none;
 }
 .btn:hover {
   color: #000;
